Added my custom changes to the repo

--- a/.env.example
+++ b/.env.example
@@ -36,7 +36,7 @@ RETRY_ATTEMPTS=3
 
 # Delay in seconds between retry attempts
 # Default: 2
-RETRY_DELAY=2
+RETRY_DELAY=60
 
 # Logging level (DEBUG, INFO, WARNING, ERROR, CRITICAL)
 # Default: INFO
@@ -69,7 +69,7 @@ LOG_EXCLUDE_PROJECTS=
 # Options: all, failed, success, canceled, skipped
 # Multiple values: failed,canceled
 # Default: all (saves logs from all jobs)
-LOG_SAVE_JOB_STATUS=all
+LOG_SAVE_JOB_STATUS=failed
 
 # Save pipeline metadata even if no logs are saved
 # Useful for tracking all pipelines even if only storing failed logs
@@ -88,11 +88,11 @@ LOG_SAVE_METADATA_ALWAYS=true
 # Authentication: If BFA_SECRET_KEY is set, it will be used as Bearer token (optional)
 # Options: true, false
 # Default: false
-API_POST_ENABLED=false
+API_POST_ENABLED=true
 
 # Request timeout in seconds for API calls
 # Default: 30
-API_POST_TIMEOUT=30
+API_POST_TIMEOUT=180
 
 # Enable retry logic for failed API requests
 # Uses the same retry configuration as GitLab API calls (RETRY_ATTEMPTS, RETRY_DELAY)
